k8s/operation/counter_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter
spec:
  containers:
  - name: counter
    image: bikecn81/counter
    ports:
    - containerPort: 8888
