k8s/operation/counter_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-test
  namespace: default
  labels:
    app: counter-service
spec:
  selector:
    app: counter
  ports:
  - name: counter-tcp
    port: 80
    targetPort: 8888
    protocol: TCP
