k8s/operation/counter_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: counter-ingress
  annotations:
          kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ben.counter.io
    http:
      paths:
      - path: /
        backend:
          serviceName: counter-test
          servicePort: 80
